[package]
authors = ["wez"]
name = "pcbautorouter"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
itertools = "0.6.1"
nalgebra = "0.12.3"
ncollide = "0.12.0"

[dependencies.conrod]
version = "0.54.0"
features = ["glium", "winit"]

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"

