[package]
authors = ["wez"]
name = "pcbautorouter"
version = "0.1.0"

[dependencies]
clap = "2.26.0"
error-chain = "0.10.0"
futures-cpupool = "0.1.5"
itertools = "0.6.1"
nalgebra = "0.12.3"
ncollide = "0.12.0"
petgraph = "0.4.5"

[dependencies.conrod]
features = ["glium", "winit"]
version = "0.54.0"

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"
