[package]
authors = ["Wez Furlong"]
name = "circuit"
version = "0.1.0"
edition = "2018"

[dependencies]
failure = "0.1"
geo = "0.12"
itertools = "0.8"
lazy_static = "1.3"
ordered-float = "1.0"
petgraph = "0.4"
reqwest = "0.9"
static-http-cache = "0.2"
log = "0.4"

[dev-dependencies]
env_logger="0.6"

[dependencies.kicad_parse_gen]
git = "https://github.com/wez/kicad-parse-gen.git"
branch = "symbolorder-kicad5"
