[package]
authors = ["wez"]
name = "pcbautorouter"
version = "0.1.0"

[dependencies]
clap = "~2.0"
error-chain = "~0.10"
geo = "~0.10"
indicatif = "~0.9"
itertools = "~0.7"
maplit = "0.1.4"
nalgebra = "~0.12"
ncollide = "~0.12"
ordered-float = "~1.0"
petgraph = "~0.4"
piston_window = "~0.81"
# We probably want 1.5.2; we need cdtEdge to be public
# and that is in master at the time of writing
spade = {git = "https://github.com/Stoeoef/spade"}

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"
