[package]
authors = ["wez"]
name = "pcbautorouter"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
failure_derive = "0.1"
geo = "0.12"
indicatif = "0.11"
itertools = "0.8"
maplit = "1.0.1"
nalgebra = "0.18"
ncollide2d = "0.19"
ordered-float = "1.0"
petgraph = "0.4"
piston_window = "~0.81"
# We probably want 1.5.2; we need cdtEdge to be public
# and that is in master at the time of writing
spade = {git = "https://github.com/Stoeoef/spade"}

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"
