[package]
authors = ["wez"]
name = "pcbautorouter"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
failure_derive = "0.1"
geo = "0.12"
indicatif = "0.11"
itertools = "0.8"
maplit = "1.0.1"
nalgebra = "0.18"
ncollide2d = "0.19"
ordered-float = "1.0"
petgraph = "0.4"
piston_window = "0.89"
spade = "1.7"

[dependencies.nom]
features = ["verbose-errors"]
version = "3.2.0"
